# mlops-project

./: .pre-commit-config.yaml  README  README.md  mlops-course.ipynb  pyproject.toml  run_pipeline.py
mlops_maker/: run_pipeline.py
mlops_maker/pipelines/: training_pipeline.py
mlops_maker/src/: data_cleaning.py  model_dev.py
mlops_maker/steps/: clean_data.py  evaluation.py  model_train.py
notebooks/: mlops-course.ipynb
pipelines/: training_pipeline.py
src/: evaluate.py  model_dev.py  preprocess.py
steps/: clean_data.py  dataloader_step.py  evaluation.py  ingest_data.py  model_train.py  trainer_step.py
