[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
zenml = {extras = ["server"], version = "^0.53.1"}
scikit-learn = "^1.3.2"
notebook = "^7.0.6"
pandas = "^2.1.4"
pyngrok = "^7.0.3"
catboost = "^1.2.2"
joblib = "^1.3.2"
lightgbm = "^4.2.0"
optuna = "^3.5.0"
streamlit = "^1.29.0"
xgboost = "^2.0.3"
markupsafe = "^2.1.3"
ruff = "^0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
